<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".CustomerCovidInfoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20dp"
            android:textColor="@color/colorWhite"
            android:textStyle="italic"
            android:padding="20dp"
            />
        <EditText
            android:id="@+id/etcustomername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:textColor="@color/colorWhite"
            android:textStyle="italic"
            android:padding="20dp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="5"
        android:singleLine="false"
        android:text="@string/covidstatement"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:textStyle="italic"
        android:padding="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentloc"
            android:textSize="20dp"
            android:textColor="@color/colorWhite"
            android:textStyle="italic"
            android:padding="20dp"
            />
        <EditText
            android:id="@+id/etlocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Location..."
            android:textSize="20dp"
            android:textColor="@color/colorWhite"
            android:textStyle="italic"
            android:padding="20dp"
            android:editable="false"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/belongstowhichzone"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="italic" />
        <Spinner
            android:id="@+id/zonespinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/patient"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="italic" />
        <Spinner
            android:id="@+id/patientspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/familypatient"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="italic" />
        <Spinner
            android:id="@+id/familypatientspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="italic"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvhighlight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="5"
        android:singleLine="false"
        android:text="@string/covidhighlight"
        android:textSize="20dp"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:padding="20dp"
        />
    <Button
        android:id="@+id/btndone"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="italic"
        android:padding="10dp"
        android:background="@drawable/custom_button"
        />

</LinearLayout>