<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".CustomerLogin2Activity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:text="Customer Login"
        android:textSize="40dp"
        android:textStyle="italic"
        android:textColor="@color/colorWhite"/>
    <EditText
        android:id="@+id/etcustomername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:hint="@string/customername"
        android:inputType="text"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:textSize="20dp"
        android:textStyle="italic"
        android:background="@color/colorWhite"/>
    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:background="@color/colorWhite"
        android:padding="10dp"
        android:textSize="20dp"
        android:textStyle="italic"
        tools:ignore="InvalidId" />
    <Button
        android:id="@+id/btncustomerlogin"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="italic"
        android:padding="15dp"
        android:background="@drawable/custom_button"
        />
</LinearLayout>



</RelativeLayout>