<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".CustomerCartActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Cart"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:textStyle="italic"
                android:padding="20dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currentloc"
                    android:textSize="20dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="italic"
                    android:padding="20dp"
                    />
                <EditText
                    android:id="@+id/etlocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Location..."
                    android:textSize="20dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="italic"
                    android:padding="20dp"
                    android:editable="false"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderdetails"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:textStyle="italic"
                android:padding="20dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="Type of waste selected:"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="italic"
                    android:padding="20dp"
                    android:layout_weight="0.5"
                    />
                <TextView
                    android:id="@+id/tvwastetype"
                    android:layout_width="0dp"
                    android:textSize="20dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="italic"
                    android:padding="20dp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Type of Category selected:"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="italic"
                    android:padding="20dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/customer_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <Button
                android:id="@+id/btncordersubmitted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_button"
                android:padding="10dp"
                android:text="@string/Submit"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="italic" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>