<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".AddWasteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/typeofwaste"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="italic" />
        <Spinner
            android:id="@+id/wastespinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="italic"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/categoryofwaste"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:weightSum="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_paper" />
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_paperc" />
                </LinearLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textStyle="italic"
                    android:padding="10dp"
                    android:background="@drawable/custom_button"
                    />
            </LinearLayout>

            </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:weightSum="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@mipmap/ic_glass" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@mipmap/ic_glassc" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnglass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textStyle="italic"
                    android:padding="10dp"
                    android:background="@drawable/custom_button"
                    />
            </LinearLayout>

        </LinearLayout>




        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:weightSum="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@mipmap/ic_organic" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@mipmap/ic_organicc" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnorganic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textStyle="italic"
                    android:padding="10dp"
                    android:background="@drawable/custom_button"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:weightSum="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@mipmap/ic_plastic" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@mipmap/ic_plasticc" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnplastic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textStyle="italic"
                    android:padding="10dp"
                    android:background="@drawable/custom_button"
                    />
            </LinearLayout>

        </LinearLayout>


            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:weightSum="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@mipmap/ic_ewaste" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@mipmap/ic_ewastec" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnewaste"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textStyle="italic"
                    android:padding="10dp"
                    android:background="@drawable/custom_button"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:padding="0dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:weightSum="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@mipmap/ic_metals" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@mipmap/ic_metalsc" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnmetals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textStyle="italic"
                    android:padding="10dp"
                    android:background="@drawable/custom_button"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btncart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:padding="10dp"
        android:background="@drawable/custom_button"/>
</LinearLayout>








